index_SWR Karl Sczuka Prize.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
 <br>
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Adapted for Royal Conservatoire The Hague<br> Master of Music in Sonology<br>
+<p style="font-family:courier;color:red;font-size:90%;">Adapted for SWR Karl Szucka Prize<br>
 </p>
+<br>
+<br>
+<small>2020_<b>The Eternal Parent</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, in Hamburg Germany. Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors as an investigation on the social experience of synchronisation during the first COVID lockdown. Commissioned for the artist collective Frank Nubala.</small><br> 
+<video width="600" height="400" controls>
+  <source src="The Eternal Parent.mov" type="video/mov">
+Your browser does not support the video tag.
+</video><br>
+<br>
+<img src="The Eternal Parent setup.JPG" alt="The Eternal Parent setup"style="width:600px;height:400px;"><br>
+<br>
+<br>
 <br>
 <img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
 <small>_<i>the middle ear</i></small> 
