--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 </html>
 <br>
 <br>
+<img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
+<small>_<i>the middle ear</i></small> 
 <br>
 <p style="font-family:courier;color:red;font-size:90%;">Adapted for SWR Karl Szucka Prize<br>
 </p>
 <br>
 <br>
-<small>2020_<b>The Eternal Parent</b>_an immersive biofeedback environment was installed for the Reeperbahn Festival, in Hamburg Germany. Taking the anatomic womb as inspiration, audio and visual impulses are tuned to the average heart rate of visitors as an investigation on the social experience of synchronisation during the first COVID lockdown. Commissioned for the artist collective Frank Nubala.</small><br> 
+<small>2020_<b>The Eternal Parent</b>is an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by the Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we merge cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
+<br>
 <video width="600" height="400" controls>
   <source src="The Eternal Parent.mov" type="video/mov">
 Your browser does not support the video tag.
@@ -25,39 +28,6 @@ Your browser does not support the video tag.
 <br>
 <img src="The Eternal Parent setup.JPG" alt="The Eternal Parent setup"style="width:600px;height:400px;"><br>
 <br>
-<br>
-<br>
-<img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
-<small>_<i>the middle ear</i></small> 
-<br>
-<br>
-<small>2023_<b>Anatomic buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. I thought it would be a fun exercise to imagine an unusual environment for each microphone to capture. The collection is still in progress.</small> 
-</small> 
-<br>
-<br>
-<small>_geophone</small> 
-<br>
-  <figure>
-  <audio controls src="geophone.mp3">
-    <a href="geophone.mp3"></a>
-  </audio>
-</figure>
-<br>
-<small>_hydrophone with Harry Golden</small> 
-<br>
-  <figure>
-  <audio controls src="hydrophone.mp3">
-    <a href="hydrophone.mp3"></a>
-  </audio>
-</figure>
-<br>
-<small>_binaural</small> 
-<br>
-  <figure>
-  <audio controls src="binaural.mp3">
-    <a href="binaural.mp3"></a>
-  </audio>
-</figure>
 <br>
 <br>
 <br>
