--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
 <img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
 <small>_<i>the middle ear</i></small> 
 <br>
+<br>
+<br>
+<br>
 <p style="font-family:courier;color:red;font-size:90%;">Adapted for SWR Karl Szucka Prize<br>
 </p>
 <br>
 <br>
-<small>2020_<b>The Eternal Parent</b>is an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by the Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we merge cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
+<small>2024_<b>The Eternal Parent</b>_an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we merge cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
 <br>
-<video width="600" height="400" controls>
+<video width="400" height="200" controls>
   <source src="The Eternal Parent.mov" type="video/mov">
 Your browser does not support the video tag.
 </video><br>
 <br>
-<img src="The Eternal Parent setup.JPG" alt="The Eternal Parent setup"style="width:600px;height:400px;"><br>
+<img src="The Eternal Parent setup.JPG" alt="The Eternal Parent setup"style="width:400px;height:200px;"><br>
 <br>
 <br>
 <br>
+<small>2024_<b>Breathing Spaces</b>_a performance presentation of works from the Spatial Sound Workshop with Ji Youn Kang, where Zone2Source in Amstelpark was transformed into an unconventional musical instrument. The sound file is a documentation of the workshop days.</small><br>
 <br>
-<small>2023_<b>Slowing walking down a suburban street</b>_is a sonic elaboration on the soundscape of a park frequently visited as a kid in suburban New Zealand. The mix-media sound piece utilises field-recordings, piano and synthesis techniques to narrate the emotionalities of encounter- returning to the site as a grownup.</small> 
+<img src="Breathing Space Sonic Acts.jpg" alt="Breathing spaces"style="width:400px;height:200px;"><br>
 <br>
 <br>
-<figure>
-  <audio controls src="slowly walking down a suburban street.mp3">
-    <a href="slowly walking down a suburban street.mp3"></a>
-  </audio>
-</figure>
 <br>
 <br>
 <img src="kairos.jpg" alt="kairos"style="width:280px;height:210px;"><br>
