--- a/index.html
+++ b/index.html
@@ -26,18 +26,11 @@
 <small>2024_<b>The Eternal Parent</b>_an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we merge cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
 <br>
 <video width="400" height="200" controls>
-  <source src="The Eternal Parent.mov" type="video/mov">
+  <source src="The Eternal Parent.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video><br>
 <br>
 <img src="The Eternal Parent setup.JPG" alt="The Eternal Parent setup"style="width:400px;height:200px;"><br>
-<br>
-<br>
-<br>
-<small>2024_<b>Breathing Spaces</b>_a performance presentation of works from the Spatial Sound Workshop with Ji Youn Kang, where Zone2Source in Amstelpark was transformed into an unconventional musical instrument. The sound file is a documentation of the workshop days.</small><br>
-<br>
-<img src="Breathing Space Sonic Acts.jpg" alt="Breathing spaces"style="width:280px;height:210px;"><br>
-<br>
 <br>
 <br>
 <br>
