--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
-<small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an <u>abstracted journalism</u>  or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram.</small> 
+<small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an <u>abstracted journalism</u>  or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram. Full stream <a href="https://refugeworldwide.com/radio/sonic-rituals-alifiyah-12-dec-2022">here</a>.</small> 
 <br>
 <br>
 <figure>
@@ -51,7 +51,7 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
-<small>2022_<b>Floating basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay uses this site as a departure point to question the meaning of change.</small> 
+<small>2022_<b>Floating basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay uses this site as a departure point to question the meaning of change. Full stream <a href="https://cashmereradio.com/episode/cashmere-specials-diasporic-listening-to-berlins-soundscape/">here</a>.</small></small> 
 <br>
 <br>
 <figure>
