--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
 Your browser does not support the video tag.
 </video><br>
 <br>
-<img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:200px;"><br>
+<img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:1800px;"><br>
+<br>
+<br>
+<br>
+<small>2024_<b>Breathing Spaces</b>_was a collaboration presentation from up-and-coming sound artists for the Sonic Acts Biennale 2024. The residency at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme with the mentorship of composer and educator, Ji Youn Kang. Here, I presented the site-specific installation "The Backyard", a collection of field-recordings made during the residency period played-back through a wireless feedback system of FM transmitters and receivers that were open and interacting with the live-space, creating a contextual sonic journal that traced the residency from beginning to end presentation.</small><br>
+<br>
+<video width="450" height="300" controls>
+  <source src="The Eternal Parent.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video><br>
+<br>
+<img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:1800px;"><br>
 <br>
 <br>
 <br>
