--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 Your browser does not support the video tag.
 </video><br>
 <br>
-<img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:180px;"><br>
+<img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:170px;"><br>
 <br>
 <br>
 <br>
-<small>2024_<b>Breathing Spaces</b>_a groupshow from up-and-coming sound artists for the Sonic Acts Biennale 2024. The residency at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme with the mentorship of composer and educator, Ji Youn Kang. Here, I presented the performance/installation "The Backyard", a collection of field-recordings made during the residency period played-back through a wireless feedback system of FM transmitters and receivers that were interacting with the live-space as well as open to live radio on-air, interweaving a sonic field that traces the residency from beginning to the end presentation within the context of existing sounding spaces. An excerpt from the installation follows.</small><br>
+<small>2024_<b>Breathing Spaces</b>_was a residency programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The residency period at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I presented the performance/installation "The Backyard", a collection of field-recordings made during the residency played-back through a wireless feedback system of FM transmitters and receivers, that were mapped through a Max patch for delays and textures. The sonic field created interlaced the sound journal of the residency period with the live exhibition space and radio on-air. </small><br>
 <br>
-<img src="kairos.jpg" alt="kairos"style="width:280px;height:210px;"><br>
+<img src="Breathing Space Sonic Acts.jpg" alt="Breathing Spaces Sonic Acts"style="width:280px;height:210px;"><br>
 <br>
 <figure>
-  <audio controls src="Kairos.mp3">
-    <a href="Kairos.mp3"></a>
+  <audio controls src="excerpt The Backyard.mp3">
+    <a href="excerpt The Backyard.mp3"></a>
   </audio>
 </figure>
 <small>_<i>installation excerpt</i></small> 
 <br>
 <br>
-<img src="kairos.jpg" alt="kairos"style="width:280px;height:210px;"><br>
+<img src="FMtransmitter.JPG" alt="FM"style="width:280px;height:210px;"><br>
 <small>_<i>The Backyard</i></small> 
 <br>
 <br>
