--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
-<small>2024_<b>Breathing Spaces</b>_was a residency programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The residency period at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers, that were mapped through a Max patch for delays and textures. The sonic field created interlaced the sound journal of the residency with the live exhibition space and radio on-air. </small><br>
+<small>2024_<b>Breathing Spaces</b>_was a residency programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The residency period at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers that were mapped through a Max patch for delays and textures. The installation interlaced a sound journal of the residency with the live exhibition space and radio on-air. </small><br>
 <br>
 <figure>
   <audio controls src="excerpt The Backyard.mp3">
@@ -47,9 +47,7 @@ Your browser does not support the video tag.
 <small>_<i>installation excerpt</i></small> 
 <br>
 <br>
-<img src="FMtransmitter.JPG" alt="FM"style="width:210px;height:280px;"><br>
-<br>
-<img src="Breathing Space Sonic Acts.jpg" alt="Breathing Spaces Sonic Acts"style="width:280px;height:210px;"><br>
+<img src="SonicActs2024shots.png" alt="FM"style="width:550px;height:280px;"><br>
 <br>
 <br>
 <br>
