--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ Your browser does not support the video tag.
 <small>_<i>installation excerpt</i></small> 
 <br>
 <br>
-<img src="SonicActs2024shots.png" alt="FM"style="width:550px;height:280px;"><br>
+<img src="SonicActs2024shots.png" alt="SonicActs2024"style="width:550px;height:280px;"><br>
 <br>
+<img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActsbanner"style="width:498px;height:280px;"><br>
 <br>
 <br>
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an <u>abstracted journalism</u>  or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram. Full stream <a href="https://refugeworldwide.com/radio/sonic-rituals-alifiyah-12-dec-2022" target="_blank">here</a>.</small> 
