--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
-<small>2024_<b>Breathing Spaces</b>_was a residency programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The residency period at Zone2Source artspace in Amsterdam involved investigations of space & sound within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers that were mapped through a Max patch for delays and textures. The installation interlaced a sound journal of the residency with the live exhibition space and radio on-air. </small><br>
+<small>2024_<b>Breathing Spaces</b>_was a residency programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The meetings were held at Zone2Source artspace in Amsterdam and involved investigations of sound & space within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I developed and presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers that were mapped through a Max patch for delays and textures. The installation interlaced a sound journal of the residency with the live exhibition space and radio on-air. </small><br>
 <br>
 <figure>
   <audio controls src="excerpt The Backyard.mp3">
