--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Your browser does not support the video tag.
 <br>
 <img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActsbanner"style="width:450px;height:253px;"><br>
 <br>
-<img src="SonicActsworking.jpg" alt="SonicActsworking"style="width:450px;height:253px;"><br>
+<img src="SonicActsworking.jpg" alt="SonicActsresidence2024"style="width:450px;height:253px;"><br>
 <br>
 <br>
 <br>
