--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Your browser does not support the video tag.
 <img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActsbanner"style="width:450px;height:253px;"><br>
 <br>
 <img src="SonicActsworking.jpg" alt="SonicActsresidence2024"style="width:450px;height:253px;"><br>
+<small>_<i>28.02.2024 @Zone2Source</i></small> 
 <br>
 <br>
 <br>
