--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </html>
 <br>
 <br>
-<img src="anatomic buoyancies.jpg" alt="hydrophone"style="width:200px;height:250px;"><br>
+<img src="anatomic buoyancies.jpg" alt="hydrophone inserted into an air balloon taken out to sea"style="width:200px;height:250px;"><br>
 <small>_<i>the middle ear</i></small> 
 <br>
 <br>
@@ -49,9 +49,9 @@ Your browser does not support the video tag.
 <small>_<i>installation excerpt</i></small> 
 <br>
 <br>
-<img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActsbanner"style="width:450px;height:253px;"><br>
+<img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActs2024banner"style="width:450px;height:253px;"><br>
 <br>
-<img src="SonicActsworking.jpg" alt="SonicActsresidence2024"style="width:450px;height:253px;"><br>
+<img src="SonicActsworking.jpg" alt="A laptop, two radio and electronic parts scattered on a table facing into a glass house"style="width:450px;height:253px;"><br>
 <small>_<i>28.02.2024 @Zone2Source</i></small> 
 <br>
 <br>
@@ -67,7 +67,7 @@ Your browser does not support the video tag.
   </audio>
 </figure>
 <br>
-<img src="kairos.jpg" alt="kairos"style="width:280px;height:210px;"><br>
+<img src="kairos.jpg" alt="Peeling layers of old posters on a billboard sign"style="width:280px;height:210px;"><br>
 <small>_<i>untimely</i></small> 
 <br>
 <br>
@@ -83,6 +83,9 @@ Your browser does not support the video tag.
   </audio>
 </figure>
 <br>
+<img src="cashmere-radio.cashmereradio.png" alt="Cashmere radio banner"style="width:450px;height:170px;"><br>
+<small>_<i>untimely</i></small> 
+<br>
 <br>
 <br>
 <br>
@@ -93,6 +96,6 @@ Your browser does not support the video tag.
 Your browser does not support the video tag.
 </video><br>
 <br>
-<img src="zero time.png" alt="Process Returning to zero time"style="width:600px;height:400px;"><br>
+<img src="zero time.png" alt="A look inside a shipping container being refitted into an art installation"style="width:600px;height:400px;"><br>
 <small>_<i>process</i></small> 
 <br>
