--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
-<small>2022_<b>Floating basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. Floating <s>University</s>, is a public intervention site above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay uses this site as a departure point to question the meaning of change. Full stream <a href="https://cashmereradio.com/episode/cashmere-specials-diasporic-listening-to-berlins-soundscape/" target="_blank">here</a>.</small>
+<small>2022_<b>Floating basin</b>_is a sound essay broadcasted on Cashmere Radio as a part of a cumulative work on Diasporic Listening to Berlin soundscapes with artist Yara Mekawei. The site chosen for this investigation is Floating <s>University</s>, a public intervention and recreation space above the rainwater retention basin of the old Templehofer airport and an urban sanctuary for wildlife and microbials. Inspired by their resistance to uphold against urban redevelopment pressures and the societal activation of post-COVID lockdown, the essay uses this site as a departure point to question the meaning of change. Full stream <a href="https://cashmereradio.com/episode/cashmere-specials-diasporic-listening-to-berlins-soundscape/" target="_blank">here</a>.</small>
 <br>
 <br>
 <figure>
