--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br>
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">Adapted for SWR Karl Szucka Prize<br>
+<p style="font-family:courier;color:red;font-size:90%;">A selection of works<br>
 </p>
 <br>
 <br>
