--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <br>
 <small>2024_<b>The Eternal Parent</b>_is an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we have merged cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
 <br>
-<small>Concept_Viktoria Nikolova</small><br>
-<small>Sound_Isul Kim</small><br>
+<small><i>concept</i> Viktoria Nikolova</small><br>
+<small><i>sound</i> Isul Kim</small><br>
 <br>
 <video width="450" height="300" controls>
   <source src="The Eternal Parent.mp4" type="video/mp4">
