--- a/index.html
+++ b/index.html
@@ -61,6 +61,64 @@ Your browser does not support the video tag.
 <br>
 <br>
 <br>
+<small>2023_<b>Anatomic Buoyancies</b>_is a collection of work arranged from material collected during Justin Bennett's field-recording workshop (The Hague). The works seek to explore the characteristics of each microphone through the choice of environment<sup>2</sup> they are placed inside. Each microphone embodies a unique shape and size, bandwidth, field of capture, and usability requirements that situates it in unique contexts. The (self-proclaimed) objective was to explore the characteristics of microphones presented to us, through imagining a suitable environment to capture. The following recordings were complied and composed during a week's excursion through the city, shifting sands, an elevated dinner, and a practise of non-listening. 
+</small> 
+<br>
+<br>
+<small>_geophone</small> 
+<br>
+  <figure>
+  <audio controls src="geophone.mp3">
+    <a href="geophone.mp3"></a>
+  </audio>
+</figure>
+<br>
+<small>_hydrophone with Harry Golden</small> 
+<br>
+  <figure>
+  <audio controls src="hydrophone.mp3">
+    <a href="hydrophone.mp3"></a>
+  </audio>
+</figure>
+<br>
+<small>_lavalier</small> 
+<br> 
+ <figure>
+  <audio controls src="lavalier2.mp3">
+    <a href="lavalier2.mp3"></a>
+  </audio>
+</figure>
+<br>
+<small>_binaural</small> 
+<br>
+  <figure>
+  <audio controls src="binaural.mp3">
+    <a href="binaural.mp3"></a>
+  </audio>
+</figure>
+<br>
+<br>
+<br>
+<img src="Voronoi diagram 2.png" alt="Voronoi diagram"style="width:180px;height:180px;"><br>
+<small>_<i>voronoi diagram</i></small> 
+<br>
+<br>
+<br>
+<small>2023_<b>Corpus ii</b>_was a live performance of Corpus i through a 4-channel speaker configuration and three receiver radios; spatialized according to the voronoi principle.</small> 
+<br>
+<br>
+<small>_ii.30.3.2023_schwarzhaus</small> 
+<br>
+ <figure>
+  <audio controls src="Corpus_ii.mp3">
+    <a href="Corpus_ii.mp3"></a>
+  </audio>
+</figure>
+<br>
+<br>
+<br>
+<br>
+<br>
 <small>2022_<b>Kairos</b>_is a sound collage commissioned for Refuge Radio Berlin as a part of Alifiyah Imani's artistic research on Sonic Rituals. The piece constructs sonic clusters of events that happened in 2022 as an interpretation of kairos, or non-linear time, and how memories take on the retrospective marker of time. The composed situations play with the proximities of encounter with the social-political landscape of Berlin. By drawing in major events: the Artemis launch, war on Ukraine, feminist protests in Iran, and how these remembrances entwine with our ordinary soundscapes, it achieves an <u>abstracted journalism</u>  or journaling of events from an individual perspective. The audio samples that mark each sonic event was taken from Instagram. Full stream <a href="https://refugeworldwide.com/radio/sonic-rituals-alifiyah-12-dec-2022" target="_blank">here</a>.</small> 
 <br>
 <br>
