--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
 </p>
 <br>
 <br>
-<small>2024_<b>Breathing Spaces</b>_was a mentorship programme and groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The meetings were held at Zone2Source artspace in Amsterdam and involved investigations of sound & space within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I developed and presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers that were mapped through a Max patch for delays and textures. The installation interlaced a sound journal of the residency with the live exhibition space and radio on-air. </small><br>
+<br>
+<small>2024_<b>Tränenpalast</b>_a site-specific composition for the WFS festival. </small><br>
+<br>
+<figure>
+  <audio controls src="Tränenpalast_final_stereo.mp3">
+    <a href="Tränenpalast_final_stereo.mp3"></a>
+  </audio>
+</figure>
+<small>_<i>listen to full version</i></small> 
+<br>
+<br>
+<img src="wfs_festival_2024.png" alt="WFSfestivalposter"style="width:450px;height:253px;"><br>
+<br>
+<img src="wfs_festival_2024.png" alt="WFS festival poster and a image of the audience at the festival on the left"style="width:450px;height:253px;"><br>
+<small>_<i>01.06.2024 Amare, The Hague</i></small> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<small>2024_<b>Breathing Spaces</b>_was a groupshow of up-and-coming sound artists selected for the Sonic Acts Biennale 2024. The meetings were held at Zone2Source artspace in Amsterdam and involved investigations of sound & space within the context of the 2024 biennale programme through the mentorship of composer and educator, Ji Youn Kang. Here, I developed and presented the performance/installation "The Backyard", a collection of field-recordings made during the working period played-back through an open wireless feedback system with FM transmitters and receivers that were mapped through a Max patch for delays and textures. The installation interlaced a sound journal of the residency with the live exhibition space and radio on-air. </small><br>
 <br>
 <figure>
   <audio controls src="excerpt The Backyard.mp3">
