--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
 <br>
 <br>
 <br>
-<small>2024_<b>Tränenpalast</b>_a site-specific composition for the WFS festival. </small><br>
+<small>2024_<b>Tränenpalast</b>_this piece was composed for the 192 speaker wave-field soundsystem installed at the New Music Lab in Amare for the Wave Field Festival. The piece centers around the former border-crossing point between East and West Germany at Berlin’s Friedrichstraße. Here, a glass panelled building was the site of German division and the final threshold for the departing to say goodbye. After the fall of the Soviet Bloc, it resigned its duties of border control and reopened its doors as a concert hall and cultural venue for the reforming city. The piece uses personal recordings of the many train rides made between Berlin and The Hague in 2023 and 2024. After relocating to the Netherlands while half of my life remained in Berlin, the long train rides became a liminal space of contemplation. Friedrichstraße station became a site of arrival, departure; of longing, separation, reconnection, and remembrance of a history that still resonates today.  </small><br>
 <br>
 <figure>
   <audio controls src="Tränenpalast_final_stereo.mp3">
     <a href="Tränenpalast_final_stereo.mp3"></a>
   </audio>
 </figure>
-<small>_<i>listen to full version</i></small> 
+<small>_<i>mp3 full</i></small> 
 <br>
-<br>
-<img src="wfs_festival_2024.png" alt="WFSfestivalposter"style="width:450px;height:253px;"><br>
 <br>
 <img src="wfs_festival_2024.png" alt="WFS festival poster and a image of the audience at the festival on the left"style="width:450px;height:253px;"><br>
 <small>_<i>01.06.2024 Amare, The Hague</i></small> 
