--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
 <br>
 <br>
 <br>
-<small>2024_<b>The Eternal Parent</b>_is an experimental oprah for voice and electronics, a collaboration with Viktoria Nikolova and commissioned by Sophia Underground. The performance in three parts puts into question the deep etchings of storytelling archetypes and spiritual tropes within the collective consciousness. Through a relentless feedback loop operating on a sonic plane, we have merged cultural, visual and auditory elements, perpetually folding them back into themselves until they metamorphose into an unrecognisable new narrative state. </small><br>
+<small>2024_<b>Parent</b>_is the duo of Viktoria Nikolova and Isul Kim, exploring the collaborative potential of operatic voice and power electronics in performance theatre. Their diverse practices merge into scene-by-scene narratives with a tongue-in-cheek approach to traditional opera, blending elements of the ordinary with contemporary motifs and modern tragedies. The interplay between voice and electronics unfolds in a semi-improvised space, fostering an ambiguous exchange between acting and performing, where the boundaries of meaning, emotion, and human connection become fluid and undefined. Meanwhile, the scenographic stage and sonic spatialization create an immersive, multi-sensory situation, dynamically transforming the space into a living, breathing instrument. </small><br>
 <br>
-<small><i>concept</i>_Viktoria Nikolova</small><br>
-<small><i>sound</i>_Isul Kim</small><br>
+<img src="Parent_performancestill.jpeg" alt="Parentperformance"style="width:450px;height:253px;"><br>
 <br>
 <video width="450" height="300" controls>
   <source src="The Eternal Parent.mp4" type="video/mp4">
@@ -76,6 +75,12 @@ Your browser does not support the video tag.
 <img src="SU2024-web.jpeg" alt="Sophia Underground banner"style="width:450px;height:170px;"><br>
 <br>
 <br>
+<small>Live performance</small> 
+<small>Sophia Underground, Bulgaria </small> 
+<small>Crawl Space, The Netherlands </small> 
+<small>Infinity Sound, Bulgaria </small> 
+<small>TAM, Bulgaria </small> 
+<small>10 to 10, The Netherlands </small> 
 <br>
 <br>
 <br>
