--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ Your browser does not support the video tag.
 </video><br>
 <br>
 <br>
-<small>Live performance</small> 
-<small>Sophia Underground, Bulgaria </small> 
-<small>Crawl Space, The Netherlands </small> 
-<small>Infinity Sound, Bulgaria </small> 
-<small>TAM, Bulgaria </small> 
-<small>10 to 10, The Netherlands </small> 
+<small>Live performance</small> <br>
+<small>Sophia Underground, Bulgaria </small> <br>
+<small>Crawl Space, The Netherlands </small> <br>
+<small>Infinity Sound, Bulgaria </small> <br>
+<small>TAM, Bulgaria </small> <br>
+<small>10 to 10, The Netherlands </small> <br>
 <br>
 <br>
 <br>
