--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your browser does not support the video tag.
 </video><br>
 <br>
 <br>
-<small>Live performance</small> <br>
+<small><b>Live performance</b></small> <br>
 <small>Sophia Underground, Bulgaria </small> <br>
 <small>Crawl Space, The Netherlands </small> <br>
 <small>Infinity Sound, Bulgaria </small> <br>
