--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Your browser does not support the video tag.
 <br>
 <br>
 <small><b>Live performance</b></small> <br>
-<small>Sophia Underground, Bulgaria </small> <br>
-<small>Crawl Space, The Netherlands </small> <br>
-<small>Infinity Sound, Bulgaria </small> <br>
-<small>TAM, Bulgaria </small> <br>
-<small>10 to 10, The Netherlands </small> <br>
+<small>27-4-24 Sophia Underground, Bulgaria </small> <br>
+<small>26-6-24 Crawl Space, The Netherlands </small> <br>
+<small>18-10-24 Sophia Experimental, Bulgaria </small> <br>
+<small>20-10-24 TAM, Bulgaria </small> <br>
+<small>12-12-24 10 to 10, The Netherlands </small> <br>
 <br>
 <br>
 <br>
