--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <br>
 <small>2024_<b>Parent</b>_is the duo of Viktoria Nikolova and Isul Kim, exploring the collaborative potential of operatic voice and power electronics in performance theatre. Their diverse practices merge into scene-by-scene narratives with a tongue-in-cheek approach to traditional opera, blending elements of the ordinary with contemporary motifs and modern tragedies. The interplay between voice and electronics unfolds in a semi-improvised space, fostering an ambiguous exchange between acting and performing, where the boundaries of meaning, emotion, and human connection become fluid and undefined. Meanwhile, the scenographic stage and sonic spatialization create an immersive, multi-sensory situation, dynamically transforming the space into a living, breathing instrument. </small><br>
 <br>
-<br>
-<small><i>Live performance</i></small> <br>
+<small><i>Performed at </i></small> <br>
 <small>27-4-24 Sophia Underground, Bulgaria </small> <br>
 <small>26-6-24 Crawl Space, The Netherlands </small> <br>
 <small>18-10-24 Sophia Experimental, Bulgaria </small> <br>
