--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 <small>2024_<b>Tränenpalast</b>_this piece was composed for the 192 speaker wave-field soundsystem installed at the New Music Lab in Amare for the WFS Festival. The piece centers around the former border-crossing point between East and West Germany at Berlin’s Friedrichstraße. Here, the glass panelled building was the site of German division and the final threshold for the departing to say goodbye. After the fall of the Soviet Bloc, it resigned its duties of border control and reopened its doors as a concert hall and cultural venue for the reforming city. The piece uses personal recordings of the many train rides made between Berlin and The Hague in 2023 and 2024. After relocating to the Netherlands, the long train rides back to Berlin became a liminal space of contemplation and Friedrichstraße station a site of arrival, departure; of longing, separation, reconnection, and remembrance of a history that still resonates today.  </small><br>
 <br>
 <figure>
-  <audio controls src="Tränenpalast_final_stereo.mp3">
-    <a href="Tränenpalast_final_stereo.mp3"></a>
+  <audio controls src="Traenenpalast_final_stereo.mp3">
+    <a href="Traenenpalast_final_stereo.mp3"></a>
   </audio>
 </figure>
-<small>_<i>mp3 full</i></small> 
 <br>
 <br>
 <img src="wfs_festival_2024.png" alt="WFS festival poster and a image of the audience at the festival on the left"style="width:500px;height:253px;"><br>
