Update and rename home.html to index2.html

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <nav><small>
-    <a href="home.html">Home</a> |
+    <a href="index.html">Home</a> |
     <a href="works.html">Works</a> |
     <a href="radio.html">Radio</a> |
     <a href="about.html">About</a> |
