--- a/works.html
+++ b/works.html
@@ -2,7 +2,7 @@
     <a href="index.html">Home</a> |
     <a href="works.html">Works</a> |
     <a href="radio.html">Radio</a> |
-    <a href="Biography.html">About</a> |
+    <a href="about.html">About</a> |
     contact: isulvontrapp@gmail.com
 <br>
 </small> </nav>
