--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <br>
 <br>
 <br>
-
+<br>
+<br>
+<br>
+<br>
 <html>
 <head>
 <title>isul23k</title>
@@ -26,8 +29,14 @@
 </html>
 <br>
 <br>
+<div style="text-align: center;">
 <img src="anatomic buoyancies.jpg" alt="hydrophone inserted into an air balloon taken out to sea"style="width:200px;height:250px;"><br>
-<small>_<i>the middle ear</i></small> 
+<style>
+  .text-block {
+      margin-left: 110px; /* Adjust as needed */
+  }
+</style>
+<p class="text-block"><small>_<i>the middle ear</i></small> </p>
 <br>
 <br>
 <br>
