--- a/radio.html
+++ b/radio.html
@@ -23,7 +23,7 @@
 <br>
 <br>
 <br>
-<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi France, I installed an interactive sound installation in the Saint-Salvy cloister garden using an interaconnected network of FM transmitters and receivers. The sonically charged garden reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. The interactive space was recorded for playback on Radio Albige, a local grassroots radio project. </small><br>
+<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi France, we installed an interactive sound installation in the Saint-Salvy cloister garden using an interconnected network of FM transmitters and transistor radios. The sonically charged space reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. In collaboration with Jacob Eckhardt, we explored the potential of a live soundscape radio project where through open mics, visitors could playback sounds from their phones into the spatial installation. The interactive space was recorded for playback on Radio Albige (airing Feb 2025), a local grassroots radio project. </small><br>
 <br>
 <figure>
   <audio controls src="excerpt The Backyard.mp3">
@@ -33,12 +33,13 @@
 <small>_<i>installation excerpt</i></small> 
 <br>
 <br>
-<img src="OpenAirRadio_GmeaAlbi.png" alt="scene of cloister garden with people standing around and Topographies Sonore festival banner"style="width:500px;height:350px;"><br>
-<small>_<i>21.01.2021 @Saint-Salvy Cloister</i></small> 
+<img src="OpenAirRadio_GmeaAlbi.png" alt="scene of cloister garden with people standing around and Topographies Sonore festival banner"style="width:550px;height:350px;"><br>
+<small>_<i>28.01.2025 @Saint-Salvy Cloister</i></small> 
 <br>
 <br>
-<img src="RadioAlbiges.png" alt="radio Albiges banner"style="width:200px;height:200px;"><br>
-<br>
+<a href="https://www.radioalbiges.com/">
+    <img src="RadioAlbiges.png" alt="clickable radio Albiges banner"style="width:200px;height:200px;">
+</a>
 <br>
 <br>
 <br>
