--- a/radio.html
+++ b/radio.html
@@ -19,10 +19,10 @@
 <br>
 <br>
 <div style="text-align: center;">
-<img src="radio transmitters.jpg" alt="diy fm transmitters in a black case"style="width:250px;height:200px;"><br>
+<img src="radio transmitters.jpg" alt="diy fm transmitters in a black case"style="width:250px;height:200px;">
 <style>
   .text-block {
-      margin-left: 110px; /* Adjust as needed */
+      margin-left: 150px; /* Adjust as needed */
   }
 </style>
 <p class="text-block"><small>_<i>FM transmitters</i></small> </p>
