--- a/radio.html
+++ b/radio.html
@@ -19,7 +19,7 @@
 <br>
 <br>
 <div style="text-align: center;">
-<img src="radio transmitters.jpg" alt="diy fm transmitters in a black case"style="width:250px;height:200px;">
+<img src="radiotransmitters.JPG" alt="diy fm transmitters in a black case"style="width:250px;height:200px;">
 <style>
   .text-block {
       margin-left: 150px; /* Adjust as needed */
