--- a/radio.html
+++ b/radio.html
@@ -25,12 +25,13 @@
       margin-left: 150px; /* Adjust as needed */
   }
 </style>
-<p class="text-block"><small>_<i>FM transmitters</i></small> </p></div>
+<p class="text-block"><small>_<i>FM transmitters</i></small> </p>
 <br>
 <br>
 <br>
 <br>
 <br>
+<div style="text-align: left;">
 <p style="font-family:courier;color:red;font-size:90%;">A selection of radio works<br>
 </p>
 <br>
