--- a/works.html
+++ b/works.html
@@ -12,7 +12,11 @@
 <br>
 <br>
 <br>
-<p style="font-family:courier;color:red;font-size:90%;">A selection of works<br>
+<br>
+<br>
+<br>
+<br>
+<p style="font-family:courier;color:red;font-size:90%;">A selection of compositions, performances, installations<br>
 </p>
 <br>
 <br>
