--- a/radio.html
+++ b/radio.html
@@ -38,7 +38,7 @@
 <br>
 <br>
 <br>
-<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi France, we installed an interactive sound installation in the Saint-Salvy cloister garden using an interconnected network of FM transmitters and transistor radios. The sonically charged space reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. In collaboration with Jacob Eckhardt, we explored the potential of a live soundscape radio project where through open mics, visitors could playback sounds from their phones into the spatial installation. The interactive space was recorded for playback on Radio Albige (airing Feb 2025), a local grassroots radio project. </small><br>
+<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi France, we installed an interactive sound installation in the Saint-Salvy cloister garden using an interconnected network of FM transmitters and transistor radios. The sonically charged space reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. In collaboration with Jacob Eckhardt, we explored the potential of a live soundscape radio project where through open mics, visitors could playback sounds from their phones into the spatial installation. The interactive space was recorded for playback on Radio Albige, a local grassroots radio project. </small><br>
 <br>
 <figure>
   <audio controls src="Albi_radioinstallation_excerptRX.mp3">
