--- a/disincontinuous.html
+++ b/disincontinuous.html
@@ -4,6 +4,7 @@
     <a href="radio.html">Radio</a> |
     contact: isulvontrapp@gmail.com |
     <a href="disincontinuous.html">🪫</a>
+    <button id="emoji-button">😀</button>
 <br>
 </small> </nav>
 <br>
